# varjo-dx11-minimal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: DX11Renderer.cpp  DX11Renderer.h  Log.h  Shader.cpp  Shader.h  ShaderCode.h  Utility.cpp  Utility.h  VertexData.h  Window.cpp  Window.h  main.cpp
varjo_sdk/lib/: VarjoLib32.lib
